[package]
name = "udon"
version = "0.0.1-alpha.1"
authors = ["the udon contributors"]
edition = "2018"
description = "Audio playback library designed with game engines in mind"
repository = "https://github.com/Adamcake/Kou/" # todo: No
license = "Apache-2.0"
keywords = ["audio", "gamedev", "playback"]
include = ["src/**/*", "Cargo.toml"]

[workspace]
members = ["ffi"]

[dependencies]
ffi = { package = "udon-native", path = "ffi" }

[features]
default = ["wasapi"] # TODO: "if platform" also readd alsa
# alsa = ["alsa_rs"]
wasapi = ["ffi/wasapi"]
wav = []
