[package]
name = "udon-ffi"
version = "0.0.1-alpha.1"
authors = ["the udon contributors"]
edition = "2018"

[features]
default = []
wasapi = ["windows"]

[target.'cfg(all(target_os = "windows"))'.build-dependencies]
windows = { version = "0.11", optional = true }
[target.'cfg(all(target_os = "windows"))'.dependencies]
windows = { version = "0.11", optional = true }
